--- a/project-spec/configs/config
+++ b/project-spec/configs/config
@@ -4,6 +4,11 @@
 #
 CONFIG_SUBSYSTEM_TYPE_LINUX=y
 CONFIG_SYSTEM_ZYNQ=y
+CONFIG_SUBSYSTEM_DISTRO_PETALINUX=y
+# CONFIG_SUBSYSTEM_ARCH_AARCH64 is not set
+CONFIG_SUBSYSTEM_ARCH_ARM=y
+# CONFIG_SUBSYSTEM_ARCH_MICROBLAZE is not set
+CONFIG_SUBSYSTEM_ENDIAN_LITTLE=y
 
 #
 # Linux Components Selection
@@ -23,7 +28,10 @@ CONFIG_SUBSYSTEM_COMPONENT_LINUX__KERNEL_NAME_LINUX__XLNX=y
 #
 CONFIG_SUBSYSTEM_AUTOCONFIG_DEVICE__TREE=y
 # CONFIG_SUBSYSTEM_DEVICE_TREE_MANUAL_INCLUDE is not set
-CONFIG_SUBSYSTEM_HARDWARE_AUTO=y
+
+#
+# Subsystem Hardware Settings
+#
 CONFIG_SUBSYSTEM_PROCESSOR0_IP_NAME="ps7_cortexa9_0"
 CONFIG_SUBSYSTEM_PROCESSOR_ps7_cortexa9_0_SELECT=y
 CONFIG_SUBSYSTEM_ENABLE_ARCHARM=y
@@ -35,7 +43,6 @@ CONFIG_SUBSYSTEM_MEMORY_PS7_DDR_0_BANKLESS_SELECT=y
 # CONFIG_SUBSYSTEM_MEMORY_MANUAL_SELECT is not set
 CONFIG_SUBSYSTEM_MEMORY_PS7_DDR_0_BANKLESS_BASEADDR=0x0
 CONFIG_SUBSYSTEM_MEMORY_PS7_DDR_0_BANKLESS_SIZE=0x40000000
-CONFIG_SUBSYSTEM_MEMORY_PS7_DDR_0_BANKLESS_KERNEL_BASEADDR=0x0
 CONFIG_SUBSYSTEM_MEMORY_PS7_DDR_0_BANKLESS_U__BOOT_TEXTBASE_OFFSET=0x4000000
 CONFIG_SUBSYSTEM_MEMORY_IP_NAME="PS7_DDR_0"
 
@@ -111,16 +118,13 @@ CONFIG_SUBSYSTEM_SD_PS7_SD_1_SELECT=y
 #
 CONFIG_SUBSYSTEM_RTC_MANUAL_SELECT=y
 CONFIG_SUBSYSTEM_USB_PS7_USB_0_SELECT=y
-# CONFIG_SUBSYSTEM_ARCH_AARCH64 is not set
-CONFIG_SUBSYSTEM_ARCH_ARM=y
-# CONFIG_SUBSYSTEM_ARCH_MICROBLAZE is not set
-CONFIG_SUBSYSTEM_ENDIAN_LITTLE=y
 
 #
 # DTG Settings
 #
 CONFIG_SUBSYSTEM_MACHINE_NAME="template"
 CONFIG_SUBSYSTEM_DT_XSCT_WORKSPACE="${PROOT}/components/plnx_workspace/device-tree"
+CONFIG_SUBSYSTEM_DTB_PADDING_SIZE=0x1000
 CONFIG_SUBSYSTEM_EXTRA_DT_FILES=""
 
 #
@@ -140,15 +144,15 @@ CONFIG_SUBSYSTEM_ENABLE_DT_VERBOSE=y
 # CONFIG_SUBSYSTEM_ADD_RTC_ALIAS is not set
 
 #
+# FPGA Manager
+#
+# CONFIG_SUBSYSTEM_FPGA_MANAGER is not set
+
+#
 # FSBL Configuration
 #
 CONFIG_SUBSYSTEM_FSBL_BSPCOMPILER_FLAGS=""
 CONFIG_SUBSYSTEM_FSBL_COMPILER_EXTRA_FLAGS=""
-
-#
-# FPGA Manager
-#
-# CONFIG_SUBSYSTEM_FPGA_MANAGER is not set
 
 #
 # u-boot Configuration
@@ -168,6 +172,7 @@ CONFIG_SUBSYSTEM_UBOOT_DEVICETREE_OFFSET="0x100000"
 CONFIG_SUBSYSTEM_UBOOT_KERNEL_OFFSET=0x200000
 CONFIG_SUBSYSTEM_UBOOT_RAMDISK_IMAGE_OFFSET=0x4000000
 CONFIG_SUBSYSTEM_UBOOT_FIT_IMAGE_OFFSET=0x10000000
+CONFIG_SUBSYSTEM_UBOOT_BOOTSCR_OFFSET=0x3000000
 
 #
 # QSPI/OSPI image offsets
@@ -178,6 +183,8 @@ CONFIG_SUBSYSTEM_UBOOT_QSPI_RAMDISK_OFFSET=0x1000000
 CONFIG_SUBSYSTEM_UBOOT_QSPI_RAMDISK_SIZE=0xF80000
 CONFIG_SUBSYSTEM_UBOOT_QSPI_FIT_IMAGE_OFFSET=0xA80000
 CONFIG_SUBSYSTEM_UBOOT_QSPI_FIT_IMAGE_SIZE=0x1500000
+CONFIG_SUBSYSTEM_UBOOT_QSPI_BOOTSCR_OFFSET="AUTO"
+CONFIG_SUBSYSTEM_UBOOT_QSPI_BOOTSCR_SIZE="AUTO"
 
 #
 # NAND image offsets
@@ -210,7 +217,6 @@ CONFIG_SUBSYSTEM_ROOTFS_EXT4=y
 CONFIG_SUBSYSTEM_SDROOT_DEV="/dev/mmcblk0p2"
 CONFIG_SUBSYSTEM_UIMAGE_NAME="image.ub"
 CONFIG_SUBSYSTEM_RFS_FORMATS="cpio cpio.gz cpio.gz.u-boot ext4 tar.gz jffs2"
-CONFIG_SUBSYSTEM_DTB_PADDING_SIZE=0x1000
 # CONFIG_SUBSYSTEM_COPY_TO_TFTPBOOT is not set
 
 #
@@ -219,13 +225,13 @@ CONFIG_SUBSYSTEM_DTB_PADDING_SIZE=0x1000
 CONFIG_SUBSYSTEM_HOSTNAME="PiSmasher_os"
 CONFIG_SUBSYSTEM_PRODUCT="PiSmasher_os"
 CONFIG_SUBSYSTEM_FW_VERSION="1.01"
+CONFIG_YOCTO_MACHINE_NAME="zynq-generic"
+CONFIG_YOCTO_INCLUDE_MACHINE_NAME=""
+CONFIG_YOCTO_ADD_OVERRIDES=""
 
 #
 # Yocto Settings
 #
-CONFIG_YOCTO_MACHINE_NAME="zynq-generic"
-CONFIG_YOCTO_INCLUDE_MACHINE_NAME=""
-CONFIG_YOCTO_ADD_OVERRIDES=""
 
 #
 # TMPDIR Location
@@ -237,7 +243,6 @@ CONFIG_TMP_DIR_LOCATION="${PROOT}/build/tmp"
 #
 CONFIG_DEVTOOL_WORKSPACE_LOCATION="${PROOT}/components/yocto/workspace"
 CONFIG_PLNX_IMAGES_LOCATION="${PROOT}/images/linux"
-CONFIG_MC_PLNX_IMAGES_LOCATION=""
 
 #
 # Parallel thread execution
