--- a/project-spec/meta-user/meta-xilinx-tools/recipes-bsp/uboot-device-tree/files/system-user.dtsi
+++ b/project-spec/meta-user/meta-xilinx-tools/recipes-bsp/uboot-device-tree/files/system-user.dtsi
@@ -1,4 +1,6 @@
-/include/ "system-conf.dtsi" / { 	
+/include/ "system-conf.dtsi" /
+
+{ 	
     aliases{ 		
         eth0 = &gem0; 		
         eth1 = &gem1; 	
