--- a/project-spec/meta-user/conf/petalinuxbsp.conf
+++ b/project-spec/meta-user/conf/petalinuxbsp.conf
@@ -1,7 +1,8 @@
 #User Configuration
 
 #OE_TERMINAL = "tmux"
-IMAGE_BOOT_FILES:zynq = "BOOT.BIN boot.scr uImage image.ub system.dtb system.bit boot.scr uImage"
 PACKAGE_CLASSES = "package_deb"
 EXTRA_IMAGE_FEATURES += " package-management "
 IMAGE_INSTALL += " gnupg nano "
+#IMAGE_FSTYPES_remove = " tar.gz cpio cpio.gz.u-boot"
+IMAGE_BOOT_FILES:zynq = "BOOT.BIN boot.scr uImage image.ub system.dtb system.bit boot.scr uImage"
